<resources>
    <string name="app_name">ETP4700_Projekti</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="prefskey">MY_SHARED_PREFERENCES</string>
    <string name="loginstatus">LOGINSTATUS</string>
    <string name="createaccount">Register new account?</string>
    <string name="apptitle">Project Tasks</string>
    <string name="register_info">Register new account</string>
    <string name="createaccount_action">CREATE ACCOUNT</string>
    <string name="descriptionLong">"Please enter a short description"</string>
    <string name="overview">Overview</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="myprofile">My Profile</string>
    <string name="returntopreviouspage">Or return to previous page</string>
    <string name="userdetails">User details</string>
    <string name="summary">Summary</string>
    <string name="userid">User ID</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="newdescriptionLong">Please enter new description</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="passwordLong">Password: ******</string>
    <string name="currentpassword">Current password</string>
    <string name="newpassword">New Password</string>
    <string name="invalidnewpassword">"Please enter new password"</string>
    <string name="invalidoldpassword">Current password incorrect!</string>
    <string name="availabletasks">Available tasks</string>
    <string name="mytasks">My tasks</string>
    <string name="selectedandavailabletasks">Selected and available tasks</string>
    <string name="longitudinal">Longitudinal</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="place">Place</string>
    <string name="requestadminlogin">Admin credentials required</string>
    <string name="coordinates">Coordinates LON/LAT</string>
    <string name="chooselocation">Set task location:</string>
    <string name="title_activity_maps">Map</string>
    <string name="askselectlocation">Select this location?</string>
    <string name="LOCALADMIN">admin</string>
    <string name="LOCALADMINPWD">password</string>
    <string name="reservetask">Reserve task</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="laststarted">Last started:</string>
    <string name="laststopped">Last stopped:</string>
    <string name="taskstarted">Task started</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="askconfirmdelete">Are you sure you want to delete this task?</string>
    <string name="yourtask">Task: Selected</string>
    <string name="taskunavailable">Task: Unavailable</string>
    <string name="taskavailable">Task: Available</string>
    <string name="taskfinished">Task: Finished</string>
    <string name="started">Started:</string>
    <string name="stopped">Stopped:</string>
    <string name="descriptionmissing">Description missing</string>
    <string name="changedescription">Change description</string>
    <string name="changepwd">Change password</string>
    <string name="hint_updateinterval">Please enter update interval (ms)</string>
    <string name="updateinterval">Update interval (ms)</string>
    <string name="updatedistance">Update distance (meters)</string>
    <string name="hint_updatedistance">Please enter update distance (meters)</string>
    <string name="changesettings">Change settings</string>
    <string name="togglebackgroundservice">Toggle background service</string>
    <string name="tasknearby">Task nearby</string>
    <string name="taptoopentaskdetails">Tap to open task details</string>
    <string name="nearbytask">Nearby task:</string>
    <string name="starttask">Start task</string>
    <string name="reserved">Reserved</string>
    <string name="owner">Owner</string>
    <string name="assignedtootheruser">Task has been assigned to other user</string>
    <string name="assignedtoyou">Task has been assigned to you</string>
    <string name="taskisavailable">Task is available</string>
    <string name="notstartedyet">Not started yet</string>
    <string name="notstoppedyet">Not stopped yet</string>
    <string name="started2">Started</string>
    <string name="stopped2">Stopped</string>
    <string name="servicelog">Service log</string>
    <string name="clearlog">Clear log</string>
    <string name="refreshlog">Refresh log</string>
    <string name="openservicelog">Open service log</string>
    <string name="clearlog_q">Clear log?</string>
</resources>
