<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/tv_taskdetails_taskowner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner" />

    <View
        android:id="@+id/colorbar"
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <TextView
        android:id="@+id/tv_taskdetails_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tv_taskdetails_desc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/started"/>

        <TextView
            android:id="@+id/tv_taskdetails_tasksettingsstart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="16dp"
            android:text="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopped"/>

        <TextView
            android:id="@+id/tv_taskdetails_tasksettingsstop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </GridLayout>

    <ToggleButton
        android:id="@+id/btn_taskdetails_reserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservetask"
        android:textOff="@string/reservetask"
        android:textOn="@string/reserved"
        android:onClick="reserveTask"/>

    <ToggleButton
        android:id="@+id/btn_taskdetails_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starttask"
        android:textOn="@string/started2"
        android:textOff="@string/stopped2"
        android:onClick="startTask"/>

</LinearLayout>