<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Switch
        android:id="@+id/sw_toggleservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebackgroundservice"
        android:switchPadding="16dp"/>

    <Button
        android:id="@+id/btn_openservicelog"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openservicelog"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_updateinterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateinterval" />

    <TextView
        android:id="@+id/tv_updateintervalinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/tv_updatedistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updatedistance" />

    <TextView
        android:id="@+id/tv_updatedistanceinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/btn_changesettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changesettings" />

</LinearLayout>