<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tv_tasksettingsdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:text="@string/reservetask"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <Switch
            android:id="@+id/sw_reservetask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskstarted"
            android:minWidth="120dp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        <Switch
            android:id="@+id/sw_taskstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/started"
            tools:minWidth="96dp" />

        <TextView
            android:id="@+id/tv_tasksettingsstart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="16dp"
            android:text="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopped"
            tools:minWidth="96dp" />

        <TextView
            android:id="@+id/tv_tasksettingsstop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </GridLayout>

</LinearLayout>