<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:elevation="4dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:id="@+id/toolbar">

    </android.support.v7.widget.Toolbar>


        <TextView
            android:id="@+id/overview_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/userdetails"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/overview_header"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/space" />

        <TextView
            android:id="@+id/tv_userid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/userid"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/space"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_userid"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/space2" />

        <TextView
            android:id="@+id/tv_userdesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/descriptionLong"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/space2"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>